# crashrpt3

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  appveyor.yml
demos/ConsoleDemo/: CMakeLists.txt  ConsoleDemo.cpp
demos/MFCDemo/: CMakeLists.txt
demos/WTLDemo/: AboutDlg.h  CMakeLists.txt  CrashThread.cpp  CrashThread.h  DocumentDlg.h  MainDlg.cpp  MainDlg.h  WTLDemo.cpp  WTLDemo.rc  resource.h  stdafx.h
include/: CrashRpt.h
lang_files/: crashrpt_lang_CS.ini  crashrpt_lang_DE.ini  crashrpt_lang_EN.ini  crashrpt_lang_ES.ini  crashrpt_lang_FR.ini  crashrpt_lang_HI.ini  crashrpt_lang_IT.ini  crashrpt_lang_JA.ini  crashrpt_lang_KO.ini  crashrpt_lang_PL.ini  crashrpt_lang_PT.ini  crashrpt_lang_RU.ini  crashrpt_lang_SK.ini  crashrpt_lang_ZH-CN.ini
processing/crashrptprobe/: CMakeLists.txt  CrashDescReader.cpp  CrashDescReader.h  CrashRptProbe.cpp  MinidumpReader.cpp  MinidumpReader.h  stdafx.h  strconv.h
processing/crprober/: CMakeLists.txt  main.cpp
reporting/crashrpt/: CMakeLists.txt  CrashHandler.cpp  CrashHandler.h  CrashRpt.cpp  CrashRpt.def  CritSec.h  LastErrorThreaded.cpp  LastErrorThreaded.h  SharedMem.cpp  SharedMem.h  SharedMemory.cpp  StdAfx.h  TestCrash.cpp  TestCrash.h  Utility.cpp  Utility.h  dllmain.cpp  strconv.h
reporting/crashsender/: CMakeLists.txt  CrashInfoReader.cpp  CrashInfoReader.h  CrashSender.rc  CrashSender_vs2010.vcxproj  DetailDlg.cpp  DetailDlg.h  ErrorReportDlg.cpp  ErrorReportDlg.h  ErrorReportSender.cpp  ErrorReportSender.h  FilePreviewCtrl.cpp  FilePreviewCtrl.h  HttpRequestSender.cpp  MailMsg.cpp  ProgressDlg.cpp  ResendDlg.cpp  ScreenCap.cpp  ScreenCap.h  SharedMemory.h  Utility.cpp  Utility.h  VideoRec.cpp  VideoRec.h  main.cpp  md5.cpp  resource.h  smtpclient.cpp  stdafx.h
tests/: CMakeLists.txt  CrashRptAPITests.cpp  CrashRptProbeAPITests.cpp  CrproberTests.cpp  DeliveryTests.cpp  TestUtils.cpp  Tests.cpp
